--- a/lib/assets/index.html
+++ b/lib/assets/index.html
@@ -369,7 +369,7 @@ a:hover{
         <li><a href="/var">VARIABLES</a></li>
         <li><a href='https://github.com/SuhailTechInfo/Suhail-Md-Media' > PLUGINS </a></li>
         <li><a href='https://github.com/SuhailTechInfo/Suhail-Md/wiki' > WIKI's </a></li>
-        <li><a href='https://youtube.com/SuhailTechInfo' > YOUTUBE </a></li>
+        <li><a href='https://youtube.com/@kingsglobe1?si=zA_50piVUuTuXa3i' > YOUTUBE </a></li>
         <li><a href='https://t.me/suhail_md0' > TELEGRAM </a></li>
     </ul>
 
@@ -411,7 +411,7 @@ a:hover{
     </div>
 
 
-    <h1 style="color: #d4cfcf; "> SUHAIL MD ❤️</h1>
+    <h1 style="color: #d4cfcf; "> KING JOJ ❤️</h1>
 <br>
     <h1>
         A Simple <span style="border-bottom:4px dotted #3c3c3c; color: #d4cfcf;">Pakistani</span> Whatsapp Bot.
