--- a/lib/assets/index.html
+++ b/lib/assets/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" sizes="32x32" href="/logo">
-    <title>SUHAIL MD 🇵🇰🌙</title>
+    <title>PROFESSOR MD</title>
 
     <script>
         window.console = window.console || function(t) {};
@@ -26,7 +26,7 @@
 
    body {
        background: #05705d;
-       background: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.8)), url("https://raw.githubusercontent.com/SuhailTechInfo/Suhail-Md/main/lib/assets/pk.jpg");
+       background: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.8)), url("https://raw.githubusercontent.com/SuhailTechInfo/Suhail-Md/main/lib/assets/prof.jpg");
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center;
